feat: replicate image authoring workflows
